Fix valgrind problem in pdfwrite.

The following command:

 gs -sOutputFile=out2.ps -dMaxBitmap=400000000 -sDEVICE=ps2write -r72
    -Z: -dNOPAUSE -dBATCH -K2000000 -dClusterJob
    /home/marcos/cluster/tests_private/comparefiles/Bug690837.pdf

shows problems where we call dash_pattern_eq on uninitialised data.

It looks very much to me like pdf_load_viewer_state fails to copy
the dash data, despite allocating space for it. We fix that here.

Also, we never check whether the allocation fails or not. Add some
error checking.